Update Fraud Detection Data Challenge_Upton.ipynb

--- a/Fraud Detection Data Challenge_Upton.ipynb
+++ b/Fraud Detection Data Challenge_Upton.ipynb
@@ -5,13 +5,6 @@
    "metadata": {},
    "source": [
     "# Fraud Detection Data Challenge\n",
-    "Hi Fang! \n",
-    "\n",
-    "I wanted to provide to you an example of how I approach the problem of fraud detection and risk modeling. This notebook is meant to supplement our in-person interview with an additional deliverable that, I hope, provides to you a sense of my dedication and passion for modeling risk and detecting fraudulent transactions. While much of this work may be under the domain of Lin and the position will involve much more work in the domain of SQL queries and application of unsupervised learning techniques, I thought I would show my adeptness in applying current open-source solutions to the fraud detection problem. \n",
-    "\n",
-    "I hope the work below shows how excited I am to be considered for a position working under you at Vesta Corporation! I know that I would be able to learn much from you and find highly fullfulling work as part of your team!\n",
-    "\n",
-    "-Andy\n",
     "\n",
     "## Content\n",
     "Of course, it's not easy finding good datasets in applying fraud detection methodologies, but this dataset comes pretty close. It's from a [2013 Kaggle Competition](https://www.kaggle.com/mlg-ulb/creditcardfraud).\n",
@@ -1493,7 +1486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I hope you enjoyed this fraud detection data challenge run through and I hope it shows my dedication and passion for working as a data scientist on your team! "
+    "I hope you enjoyed this fraud detection data challenge run through. "
    ]
   },
   {
